Fix CW event icon alignment

--- a/flagship/src/app/campaign/event-timeline/event-timeline.component.scss
+++ b/flagship/src/app/campaign/event-timeline/event-timeline.component.scss
@@ -7,7 +7,7 @@
 }
 
 .swg.timeline-icon {
-    top: 3px;
+    top: 2.5px;
     left: 2px;
 }
 
